mobile layout changes

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     }
   </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
+<body class="sans-serif w-100 center black-70 f6 bg-white pa2-ns relative">
   <div class="mw9-l mw8-m center pl4-l pr4-l mt4-l mt3-m mt0">
     <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5">
       <img src="images/logo-01.png" class="w-100 dn db-ns">
       <img src="images/logo-mobile.png" class="w-100 dn-ns">
     </div>
     <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4-ns mb3">Scientific illustration and animation studio</p>
-    <div class="w-100 mw7 tc center bb b--moon-gray bt">
+    <div class="w-100 mw7 tc center bb b--gray bt">
       <div class="w-100 dt mw7 center" style="font-size: 12px !important;">
         <a class="f6 link dim ph3-ns ph2 pv3 mb2 black-80 br b--moon-gray v-mid w-20 dtc" href="about.html"><p class="f3-ns f5 ma0">About</p></a>
         <a class="f6 link dim ph3-ns ph2 pv2 mb2 br b--moon-gray v-mid w-20 dtc" href="mailto:sean@inform.studio"><img class="w3-ns w2 v-mid o-80" src="images/mail-square.svg"></a>
@@ -61,7 +61,7 @@
         <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 v-mid w-20 dtc" href="https://twitter.com/inform_studio"><img class="w2-ns w1 v-mid o-80" src="images/logos/twitter.svg"></a>
       </div>
     </div>
-    <div class="cf grid-l mw8 center pb3 pt5-ns pt3">
+    <div class="cf grid-l mw8 center pb3 pt5-ns pt3 pl0-ns pr0-ns pl2 pr2">
       <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3-ns mb3 mb0-ns">
         <a href="journal-covers.html" class="dark-gray no-underline">
           <div class="relative ba b--gray grow pointer image-container br3-ns dt db-ns w-100">
