mobile layout changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pa2-ns relative">
+<body class="sans-serif w-100 center black-70 f6 bg-white pa2-ns pt2 pb2 relative">
   <div class="mw9-l mw8-m center pl4-l pr4-l mt4-l mt3-m mt0">
     <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5">
       <img src="images/logo-01.png" class="w-100 dn db-ns">
