mobile layout changes

--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -43,7 +43,7 @@
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">We'll work with you translate your message into visual form, creating a clear, understandable picture for your audience.</p>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 pt2 pt0-ns lh-copy">We'll work with you translate your message into visual form, creating a clear, understandable picture for your audience.</p>
     </div>
   </section>
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
