--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -44,7 +44,7 @@
     </div>
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4">
-    <div class="mw8 w-100 center pl2 pr2">
+    <div class="mw8 w-100 center pl2 pr2 pt2 pt0-ns">
       <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">We combine data, photographs, and careful research to faithfully represent the essence of a concept. We'll work with you to accurately translate the science into a compelling illustration.</p>
     </div>
   </section>
@@ -61,7 +61,7 @@
     </div>
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
-    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
+    <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 pt2 pt0-ns relative z-1">
       <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">However, accuracy isn't sufficient—an illustration should be attractive as well! Captivating artwork inspires the imagination and leaves the viewer curious to learn more.</p>
       <p class="f2-ns f3 mw6 center tc mt5-ns mt4 lh-copy mb3">Recent work:</p>
       <div class="w-100 dt-ns">
