images are now responsive and properly sized

--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -36,8 +36,15 @@
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
-        <div class="w-100-ns w-100 dtc-ns v-mid dn db-ns"><img src="images/circlediagram.png"></div>
-        <div class="w-100-ns w-100 dtc-ns v-mid dn-ns"><img src="images/circlediagram-small.png"></div>
+        <div class="w-100-ns w-100 dtc-ns v-mid">
+          <picture>
+            <source media="(max-width: 480px)"
+                    srcset="images/technical-graphics/circlediagram-small@1x.png 1x, images/technical-graphics/circlediagram-small@2x.png 2x">
+            <img src="images/technical-graphics/circlediagram@1x.png"
+                 srcset="images/technical-graphics/circlediagram@1x.png 1x, images/technical-graphics/circlediagram@2x.png 2x"
+                 alt="Time series of a pendulum and phase diagram.">
+          </picture>
+        </div>
       </div>
     </div>
   </section>
@@ -49,8 +56,16 @@
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner-1.png"></div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner-2.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/technical-graphics/triple-point-banner-1@1x.png"
+               srcset="images/technical-graphics/triple-point-banner-1@1x.png 1x, images/technical-graphics/triple-point-banner-1@2x.png 2x"
+               alt="Time series cartoon of triple-point cell.">
+        </div>
+        <div class="w-50-ns w-100 dtc-ns v-mid">
+          <img src="images/technical-graphics/triple-point-banner-2@1x.png"
+               srcset="images/technical-graphics/triple-point-banner-2@1x.png 1x, images/technical-graphics/triple-point-banner-2@2x.png 2x"
+               alt="Time series cartoon of triple-point cell.">
+        </div>
       </div>
     </div>
   </section>
@@ -62,8 +77,9 @@
     <div class="w-100 cf mt4">
     <div class="w-50-ns w-100 fl-ns pa3">
       <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
-        <img src="images/polyethylene.png" class="center">
-        <!-- <a href="http://inform.studio/images/polyethylene.png" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+        <img src="images/technical-graphics/polyethylene@1x.png"
+             srcset="images/technical-graphics/polyethylene@1x.png 1x, images/technical-graphics/polyethylene@2x.png 2x"
+             alt="Cartoon of polyethylene molecule.">
       </div>
       <div class="w-100 lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr">Basic cartoons.</p>
@@ -71,8 +87,9 @@
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
       <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
-        <img src="images/microscope-crop.jpg" class="center">
-        <!-- <a href="http://inform.studio/images/microscope-crop.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+        <img src="images/technical-graphics/microscope@1x.jpg"
+             srcset="images/technical-graphics/microscope@1x.jpg 1x, images/technical-graphics/microscope@2x.jpg 2x"
+             alt="Line drawing of microscope.">
       </div>
       <div class="w-100 v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr">Line art.</p>
@@ -80,8 +97,9 @@
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
       <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
-        <img src="images/vapor-cell-cropped.jpg" class="center">
-        <!-- <a href="http://inform.studio/images/vapor-cell-cropped.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+        <img src="images/technical-graphics/vapor-cell-cropped@1x.jpg"
+             srcset="images/technical-graphics/vapor-cell-cropped@1x.jpg 1x, images/technical-graphics/vapor-cell-cropped@2x.jpg 2x"
+             alt="Diagram of atomic vapor cell.">
       </div>
       <div class="w-100 v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr">Device diagrams.</p>
@@ -89,27 +107,24 @@
     </div>
     <div class="w-50-ns w-100 fl-ns pa3">
       <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
-        <img src="images/solarspectra-color.png" class="center">
-        <!-- <a href="http://inform.studio/images/solarspectra-color.png" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a> -->
+        <img src="images/technical-graphics/solarspectra-color@1x.png"
+             srcset="images/technical-graphics/solarspectra-color@1x.png 1x, images/technical-graphics/solarspectra-color@2x.png 2x"
+             alt="Illustration of device for collecting solar spectra.">
       </div>
       <div class="w-100 v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr">Detailed illustrations.</p>
       </div>
     </div>
   </div>
-    <!-- <div class="w-100 dt-l mt5">
-      <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f4-ns f5 tc center lh-copy mb3 tr">From short cartoons, for an article or presentation<span class="f6">...</span></p>
-      </div>
-      <div class="w-50-l w-100 dtc-l pa2 pb1 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/prospect-diagram-large.jpg" class="center"></div>
-    </div> -->
   </section>
   <section class="bg-white bt b--white w-100 mt0 pb5-ns pb4 relative">
     <div class="mw9 w-100 center pl5-l pr5-l pl2 pr2 relative z-1">
       <p class="f2-ns f3 mw6 center tc mt0 lh-copy mt4">Recent work:</p>
       <div class="w-100 mw7 center tc ba b--moon-gray shadow-3 pa2 bg-white relative">
-        <img src="images/neutron-detector.jpg" class="w-100">
-        <a href="http://inform.studio/images/neutron-detector.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+        <img src="images/technical-graphics/neutron-detector@1x.jpg"
+             srcset="images/technical-graphics/neutron-detector@1x.jpg 1x, images/technical-graphics/neutron-detector@2x.jpg 2x"
+             alt="Illustration of device for collecting solar spectra.">
+        <a href="http://inform.studio/images/technical-graphics/neutron-detector-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
       </div>
       <p class="f6 tc b mb1">Calibration stages for portable neutron flux monitor</p>
       <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
