--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -34,7 +34,7 @@
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
-        <div class="w-100-ns w-100 dtc-ns v-mid">
+        <div class="w-100 dtc-ns v-mid">
           <picture>
             <source media="(max-width: 480px)"
                     srcset="images/technical-graphics/circlediagram-small@1x.png 1x, images/technical-graphics/circlediagram-small@2x.png 2x">
