images are now responsive and properly sized

--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -39,7 +39,11 @@
             <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn">Accurate depictions<span class="f6">...</span></p>
           </div>
         </div>
-        <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/quantum_dot.jpg"></div>
+        <div class="w-60-ns w-100 dtc-ns v-mid">
+          <img src="images/illustration/quantum_dot@1x.jpg"
+               srcset="images/illustration/quantum_dot@1x.jpg 1x, images/illustration/quantum_dot@2x.jpg 2x"
+               alt="Quantum dot.">
+        </div>
       </div>
     </div>
   </section>
@@ -51,7 +55,11 @@
   <section class="w-100 pl2 pr2 bt b--moon-gray" style="background-color: rgb(1, 5, 8)">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
-        <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/emsquid.jpg"></div>
+        <div class="w-60-ns w-100 dtc-ns v-mid">
+          <img src="images/illustration/emsquid@1x.jpg"
+               srcset="images/illustration/emsquid@1x.jpg 1x, images/illustration/emsquid@2x.jpg 2x"
+               alt="SQUID device demonstrating electromagnetic transparency.">
+        </div>
         <div class="w-40-ns dtc-ns v-mid">
           <div class="tl">
             <p class="w-100 fr-ns tc-l tc f3-l f4-m f4 lh-copy light-gray db-ns dn"><span class="f6">...</span>of complex phenomena.</p>
@@ -67,24 +75,30 @@
       <div class="w-100 dt-ns">
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
-            <img src="images/illustration/cover.jpg">
-            <a href="http://inform.studio/images/illustration/cover.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <img src="images/illustration/cover@1x.jpg"
+                 srcset="images/illustration/cover@1x.jpg 1x, images/illustration/cover@2x.jpg 2x"
+                 alt="Quantum phase switch.">
+            <a href="http://inform.studio/images/illustration/cover-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Quantum phase switch</p>
           <p class="f7 tc mt0">Client: University of Maryland</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
-            <img src="images/illustration/nanowire.jpg">
-            <a href="http://inform.studio/images/illustration/nanowire.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <img src="images/illustration/nanowire@1x.jpg"
+                 srcset="images/illustration/nanowire@1x.jpg 1x, images/illustration/nanowire@2x.jpg 2x"
+                 alt="Gallium-nitride nanowire LED.">
+            <a href="http://inform.studio/images/illustration/nanowire@2x.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Gallium-nitride nanowire LED</p>
           <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
         </div>
         <div class="w-third-ns pa3-l pa2 dtc-ns">
           <div class="pa1 pb0 bg-white shadow-3 relative">
-            <img src="images/illustration/cover2.jpg">
-            <a href="http://inform.studio/images/illustration/cover2.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <img src="images/illustration/atomlens@1x.jpg"
+                 srcset="images/illustration/atomlens@1x.jpg 1x, images/illustration/atomlens@2x.jpg 2x"
+                 alt="Optics for single-atom imaging.">
+            <a href="http://inform.studio/images/illustration/atomlens-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Optics for single-atom imaging</p>
           <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
