images are now responsive and properly sized

--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -43,7 +43,12 @@
           <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
         </div>
         <div class="w-20-l w-100 dtc-l center mw6 v-mid tc mb0"><h2 class="mt0">versus</h2></div>
-        <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6"><img src="images/mode_2-small.gif" class="center ba b--moon-gray bg-lighter-gray shadow-3"></div>
+        <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6">
+          <img src="images/animation/drumhead@1x.gif"
+               srcset="images/animation/drumhead@1x.gif 1x, images/animation/drumhead@2x.gif 2x"
+               alt="Animation of drumhead mode."
+               class="center ba b--moon-gray bg-lighter-gray shadow-3 w-100">
+        </div>
       </div>
   </section>
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
@@ -54,19 +59,34 @@
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr">From short cartoons, for an article or presentation<span class="f6">...</span></p>
       </div>
-      <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/moebius-hires.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center mr4-l tc">
+        <img src="images/animation/moebius@1x.gif"
+             srcset="images/animation/moebius@1x.gif 1x, images/animation/moebius@2x.gif 2x"
+             alt="Animation of cylinder turning into moebius strip."
+             class="w-100">
+      </div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3 tr"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
       </div>
-      <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #f5f5f5">
+        <img src="images/animation/mire@1x.gif"
+             srcset="images/animation/mire@1x.gif 1x, images/animation/mire@2x.gif 2x"
+             alt="Animation of interferometry process."
+             class="w-100">
+      </div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
       </div>
-      <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
+      <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #191d20">
+        <img src="images/animation/bring-to-life@1x.gif"
+             srcset="images/animation/bring-to-life@1x.gif 1x, images/animation/bring-to-life@2x.gif 2x"
+             alt="Animation of neutron detection apparatus."
+             class="w-100">
+      </div>
     </div>
   </section>
   <section class="bg-white bt b--white w-100 mt0 pb5-ns pb4 relative">
