fixing image paths

--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
           <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Animation, Development</h2>
           <p class="f5-ns f6 lh-copy mw6">Sean has a background in physics and a passion for open-source creative software.</p>
           <div class="f6-ns f7 mw6 w-100">
-            <a class="fl-ns pr4-ns pt0-ns w-100" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
-            <a class="fl pr4-ns pt2 w-100" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
+            <a class="fl-ns pr4-ns pt0-ns w-100" href="mailto:sean@inform.studio"><span><img src="images/icons/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
+            <a class="fl pr4-ns pt2 w-100" href="https://twitter.com/mnemist"><span><img src="images/icons/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
           </div>
         </div>
       </div>
@@ -50,8 +50,8 @@
           <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Graphic Design</h2>
           <p class="f5-ns f6 lh-copy mw6"></p>
           <div class="f6-ns f7 mw6">
-            <a class="fl pr4 pt0-ns" href=""><span><img src="images/mail.svg" class="w1 mr1"></span>alex@inform.studio</a>
-            <a class="fl pr4 pt2 pt0-ns" href=""><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@alexanevivet</a>
+            <a class="fl pr4 pt0-ns" href=""><span><img src="images/icons/mail.svg" class="w1 mr1"></span>alex@inform.studio</a>
+            <a class="fl pr4 pt2 pt0-ns" href=""><span><img src="images/icons/twitter.svg" class="w1 mr1 v-mid o-70"></span>@alexanevivet</a>
           </div>
         </div>
       </div> -->
