--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </div>
     </div>
     <p class="tc mt5-ns mt4 mb0 f2-ns f4 dark-gray">Interested in working together?</p>
-    <p class="f4-ns f6 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <p class="f4-ns f6 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
   <div class="mt5 bt center b--moon-gray">
     <div class="center mw6-l">
