--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -132,7 +132,7 @@
   <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5 b--white">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray mt4">Want something illustrated?</p>
-      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a> and let's discuss.</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a> and let's discuss.</p>
     </div>
   </section>
   <footer>
