--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -103,7 +103,7 @@
   <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5 b--white">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray mt4">Have a project in mind?</p>
-      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Let us know<span><img src="images/mail.svg" class="w2 ml1"></span></a> and we'll get to work.</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Let us know<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a> and we'll get to work.</p>
     </div>
   </section>
   <footer>
