--- a/journal-covers.html
+++ b/journal-covers.html
@@ -48,7 +48,7 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">You send us a copy of the paper and any ideas* you have for illustration.<span class="f7 db" style="line-height: 1.25 !important;"><br><br>*Written description, photos, hastily scribbled napkin sketches</span></p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step1-01.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step1-01.png"></div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -61,7 +61,7 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We produce a number of sketches from your description, ideas for where to start. </p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step2.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step2.png"></div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -74,7 +74,7 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, going through multiple drafts.</p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step3.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step3.png"></div>
       </div>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
@@ -87,14 +87,14 @@
             <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">When you're satisfied, we produce a high-resolution render, ready for publication.</p>
           </div>
         </div>
-        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step4.png"><p class="tc w-50 mr2 fr f7 gray mb0 permissions"><a href="https://www.nature.com/nphoton/volumes/10/issues/9" class="gray">Used with permission.</a></p></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/cover-illustration/step4.png"><p class="tc w-50 mr2 fr f7 gray mb0 permissions"><a href="https://www.nature.com/nphoton/volumes/10/issues/9" class="gray">Used with permission.</a></p></div>
       </div>
     </div>
   </section>
   <section class="w-100 bt b--moon-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
-      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="images/mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
     </div>
   </section>
   <footer>
