fixing image paths

--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -78,7 +78,7 @@
             <img src="images/illustration/cover@1x.jpg"
                  srcset="images/illustration/cover@1x.jpg 1x, images/illustration/cover@2x.jpg 2x"
                  alt="Quantum phase switch.">
-            <a href="http://inform.studio/images/illustration/cover-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <a href="http://inform.studio/images/illustration/cover-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Quantum phase switch</p>
           <p class="f7 tc mt0">Client: University of Maryland</p>
@@ -88,7 +88,7 @@
             <img src="images/illustration/nanowire@1x.jpg"
                  srcset="images/illustration/nanowire@1x.jpg 1x, images/illustration/nanowire@2x.jpg 2x"
                  alt="Gallium-nitride nanowire LED.">
-            <a href="http://inform.studio/images/illustration/nanowire@2x.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <a href="http://inform.studio/images/illustration/nanowire@2x.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Gallium-nitride nanowire LED</p>
           <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
@@ -98,7 +98,7 @@
             <img src="images/illustration/atomlens@1x.jpg"
                  srcset="images/illustration/atomlens@1x.jpg 1x, images/illustration/atomlens@2x.jpg 2x"
                  alt="Optics for single-atom imaging.">
-            <a href="http://inform.studio/images/illustration/atomlens-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+            <a href="http://inform.studio/images/illustration/atomlens-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br2 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
           </div>
           <p class="f6 tc b mb1">Optics for single-atom imaging</p>
           <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
