--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -122,7 +122,7 @@
         <img src="images/technical-graphics/neutron-detector@1x.jpg"
              srcset="images/technical-graphics/neutron-detector@1x.jpg 1x, images/technical-graphics/neutron-detector@2x.jpg 2x"
              alt="Illustration of calibration stages for portable neutron flux monitor.">
-        <a href="http://inform.studio/images/technical-graphics/neutron-detector-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/logos/expand.svg" class="o-70"></div></a>
+        <a href="http://inform.studio/images/technical-graphics/neutron-detector-large.jpg" target="_blank"><div class="bg-white absolute w2 bottom-0 br3 pa1 pr2 right-0 o-90 pointer"><img src="images/icons/expand.svg" class="o-70"></div></a>
       </div>
       <p class="f6 tc b mb1">Calibration stages for portable neutron flux monitor</p>
       <p class="f7 tc mt0">Client: National Institute of Standards and Technology</p>
